updated pytorch models

--- a/pyTorch-models-Accuracies.ipynb
+++ b/pyTorch-models-Accuracies.ipynb
@@ -30834,7 +30834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-22T21:35:06.389243Z",
@@ -30905,7 +30905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-22T21:35:25.148462Z",
@@ -30942,7 +30942,7 @@
     "plt.xlabel(r\"Test Accuracy\")\n",
     "plt.ylabel(r\"$\\langle\\log\\Vert W\\Vert\\rangle$\")\n",
     "plt.legend()\n",
-    "plt.savefig(\"img/densenet.png\")"
+    "plt.savefig(\"img/densenet-lognorms.png\")"
    ]
   },
   {
@@ -30954,7 +30954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-22T21:35:31.084991Z",
@@ -30995,12 +30995,12 @@
     "plt.title(r\"Test Accuracy vs Average Log Norm $\\langle\\log\\Vert W\\Vert\\rangle$\"+\"\\nPretrained SqueezeNet Models\")\n",
     "plt.xlabel(r\"Test Accuracy\")\n",
     "plt.ylabel(r\"$\\langle\\log\\Vert W\\Vert\\rangle$\")\n",
-    "plt.savefig(\"img/squeezenext.png\")"
+    "plt.savefig(\"img/squeezenext-lognorms.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-22T21:35:31.084991Z",
