--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -51,13 +51,13 @@ Note that $\hat{\alpha}*$ does not include the last layer, connecting the model 
 \end{figure}
 
 
-\paragraph{ResNet Models}
+\paragraph{ResNet PyTorch Models}
 
 \begin{figure}[!htb]
  \centering
-   \includegraphics[scale=0.40]{img/ResNet_top1-lognorms.png}
+   \includegraphics[scale=0.40]{img/resnet-pytorch.png}
    \caption{
-Pretrained ResNet models.
+Pretrained ResNet models available in PyTorch
 }
   \label{fig:resnet}
 \end{figure}
@@ -120,14 +120,14 @@ SqueezeNet & & \\
 \begin{figure}[!htb]
     \centering
     \subfigure[DenseNet] {
-        \includegraphics[scale=0.3]{img/DenseNet_top1-lognorms.png} 
+        \includegraphics[scale=0.3]{img/densenet-lognorms.png} 
         \label{fig:densenet}
     }
-    \subfigure[SeResNet]{
-        \includegraphics[scale=0.3]{img/SeResNet_top1-lognorms.png} 
-        \label{fig:seresnet}
+    \subfigure[SqueezeNet]{
+        \includegraphics[scale=0.3]{img/squeezenet-lognorms.png} 
+        \label{fig:squeezenet}
     }
-        \caption{Densenet, SeResNet, and SqueezeNet Models}
+        \caption{Densenet and SqueezeNet PyTorch Models}
     \label{fig:other2}
 \end{figure}
 
