updated osmr plots

--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -86,6 +86,16 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
 
 
 
+\begin{figure}[!htb]
+ \centering
+   \includegraphics[scale=0.40]{img/ResNet_top1-lognorms.png}
+   \caption{
+Pretrained ResNet models available in OSMR package}
+  \label{fig:resnet}
+\end{figure}
+
+
+
 
 
 \begin{table}[t]
