sketch of paper starting

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -56,6 +56,8 @@ The only question is, what are good weights $b_{l,i}$ ?
 
 It turns out, we can derive the weighted average $\hat{\alpha}$ directly from the more familiar Product Norm.
 
+\charlesX{THE REST OF THIS SECTION is to justify this complexity metric, using the product norm for DNNs.  I have sketeched out some of the math,.  It just needs to be presented clearly AND TO JUSTIFY computing the average log Norm (which is much faster, much simpler)}
+
 \paragraph{Product Norm Measures of Complexity}
 
 Recently it has been suggested that the complexity of a DNN, $\mathcal{C}$,  can be defined by something akin to a data dependent VC complexity, the product of norms of the layer weight matrices
