sketch of paper

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -134,6 +134,9 @@ Notice that the maximum eigenvalue is of order $10^{2}-10^{3}$ for  most DNNs we
 \charlesX{just a crude estimate}
 $$\log\Vert\mathbf{W}\Vert\sim(1-2)\times\sqrt{(\alpha-1)\lambda_{max}}$$
 
+\charlesX{
+Notice this is negative..which means there is a normalization issue or something else off
+}
 
 
 $$\text{Linear Layer:}\;\;\log\Vert\mathbf{W}_{l}\Vert\rightarrow\sqrt{b_{l}(\alpha_{l}-1)}$$
