working out the math

--- a/PowerLawExample.ipynb
+++ b/PowerLawExample.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "Fit ESD of $\\mathbf{X}$ to power law  $\\rho(\\lambda)\\sim\\lambda^{-\\alpha}$\n",
     "\n",
-    "Compute Frobenius norm $\\Vert\\mathbf{W}\\Vert_{2}$\n",
+    "Compute Frobenius norm $\\Vert\\mathbf{W}\\Vert_{F}$\n",
     "\n",
-    "Compare $\\Vert\\mathbf{W}\\Vert^{2}_{2}\\sim(1-\\alpha)\\lambda_{max}(log\\lambda_{max}-1)$\n",
+    "Compare $\\Vert\\mathbf{W}\\Vert^{2}_{F}\\sim(1-\\alpha)\\lambda_{max}(log\\lambda_{max}-1)$\n",
     "\n",
     "\n",
     "### <font color='red'>Why am I off ?</font>"
