power law example

--- a/PowerLawExample.ipynb
+++ b/PowerLawExample.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Compute Frobenius norm $\\Vert\\mathbf{W}\\Vert_{F}$\n",
     "\n",
-    "Compare $\\Vert\\mathbf{W}\\Vert^{2}_{F}\\sim(1-\\alpha)\\lambda_{max}(log\\lambda_{max}-1)$\n",
+    "Compare $\\Vert\\mathbf{W}\\Vert^{2}_{F}\\sim\\alpha\\times\\log\\lambda_{max}$\n",
     "\n",
     "\n",
     "### <font color='red'>Why am I off ?</font>"
@@ -144,38 +144,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = l_max*(np.log(l_max)-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(69.87907994285405, 61.5239745846805)"
+       "(1.8443471782460392, 2.550429738024104)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normW,  np.sqrt(b*(fit.alpha-1))"
+    "np.log10(normW), np.sqrt(fit.alpha*np.log10(l_max))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Am I even close ?"
+    "### Not  even close ? \n",
+    "\n",
+    "Exact form is also off"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6799393804655263"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(fit.alpha*(np.log10(l_max)-np.log10(l_min)) - np.log10(fit.alpha))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.485765963139514"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**(np.log10(normW)**np.log10(normW)/fit.alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "516.1589212302773"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_max"
    ]
   },
   {
