sketch of paper

--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -70,7 +70,14 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
         \includegraphics[scale=0.25]{img/DPN_top1-lognorms.png} 
         \label{fig:dpn-net}
     }
-     \subfigure[ShuffleNet]{
+           \caption{DenseNet, DPN}
+    \label{fig:more-examples1}
+\end{figure}
+
+
+\begin{figure}[!htb]
+    \centering
+      \subfigure[ShuffleNet]{
         \includegraphics[scale=0.25]{img/ShuffleNet_top1-lognorms.png} 
         \label{fig:shufflenet-small}
     }
@@ -78,7 +85,7 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
         \includegraphics[scale=0.25]{img/MeNet_top1-lognorms.png} 
         \label{fig:menet-net}
     }
-        \caption{DenseNet, DPN, ShuffleNet, MeNet}
+        \caption{ShuffleNet, MeNet}
     \label{fig:more-examples1}
 \end{figure}
 
@@ -86,9 +93,10 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
 
 
 
+
 \begin{figure}[!htb]
  \centering
-   \includegraphics[scale=0.40]{img/ResNet_top1-lognorms.png}
+   \includegraphics[scale=0.30]{img/ResNet_top1-lognorms.png}
    \caption{
 Pretrained ResNet models available in OSMR package}
   \label{fig:resnet}
