--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -70,8 +70,7 @@ Recently it has been suggested that the complexity of a DNN, $\mathcal{C}$,  can
 
 $$\mathcal{C}\sim\Vert\mathbf{W}_{1}\Vert\times\Vert\mathbf{W}_{2}\Vert\cdots\Vert\mathbf{W}_{L}\Vert$$
 
-where $\Vert\mathbf{W}\Vert$ may be the Frobenius norm or even the L1-norm.
-\michael{what more should we say here?}
+where $\Vert\mathbf{W}\Vert$ may be the Frobenius norm or even the L1-norm.  (Here we can use either  $\Vert\mathbf{W}\Vert$ or $\Vert\mathbf{W}\Vert^{2}$ for our complexity metric, which will make more sense below.
 
 
  To that end, we consider a log complexity
