sketch of paper

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -141,15 +141,20 @@ $$\hat{\alpha}:=\dfrac{1}{N_{\alpha}}\sum_{i,l}\sqrt{b_{i,j}\alpha_{i,l}}$$
 
 \charles{The main complication is if we use log norms or we use a sum of $\alpha$.  Plus we can drop the $-1$ but we have to deal with the sign change, which I have to work out}
 
-We can now use $\hat{\alpha}$ to analyze numerous pre-trained DNNs...and the results are indeed surprising.
+We can now use $\hat{\alpha}$ ,  or, equivalently, $\langle\log\Vert\mathbf{W}\Vert\rangle$ to analyze numerous pre-trained DNNs...and the results are indeed surprising.
 
 \paragraph{Numerical Example of Power Law / Norm Relation}
 
 But first, some numerical examples of the relation between $log\Vert\mathbf{W}\Vert$ and $\alpha$
-BLAH
+
 
 BLAH
 
 BLAH
+
+BLAH
+
+this is in the PowerLawExample notebook in the repo
+
 
 
