sketch of paper

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -81,7 +81,7 @@ $$\sim\bigg[\log\Vert\mathbf{W}_{1}\Vert+\log\Vert\mathbf{W}_{2}\Vert\cdots\log\
 
 We define the average log norm of the weight matrices as
 
-$$\langle\log\Vert\mathbf{W}\Vert\rangle=\dfrac{1}{N}\sum_{i=1}^{N}\log_{10}\Vert\mathbf{W}_{i}\Vert$$
+$$\langle\log\Vert\mathbf{W}\Vert\rangle=\dfrac{1}{L}\sum_{i=1}^{L}\log_{10}\Vert\mathbf{W}_{i}\Vert$$
 
 which we explicitly define in terms of the base-10 log.
 
